[sc-9045] implement new onboarding flow from aws (#1371)
* Move invite folder into on-boarding

* Remove empty remainder from old cleanup

* [sc-9045] Implement New Onboarding Flow from AWS

- New route, guard and component for AWS onboarding flow
  - the guard checks if `customer_token` is provided, calls `/marketplace/aws/setup_account` endpoint and with the response is set the current account in the SDK and authenticate the user
  - in case of error (missing or invalid customer_token) we redirect to login page with an error message
- Create the different steps for AWS onboarding flow

* New KB creation form used in both modal and onboarding flow

* Invite collaborators modal

  - Display invite collaborators modal when there is a query parameter `?setup=invite-collaborators`
  - Let user choose to go to SSO configuration page or to directly invite users
  - When inviting users, display toasts for success and error and redirect to user management page once done
  - Display pending invitations in User management page + add ability to delete invitation.

* Filter out GCP zones for AWS accounts

* Update aws guard to go to manage account when onboarding is already done

* Always returns all zones on stage

* Fix prod build

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -47,6 +47,19 @@
 	"account.free_trial_ended.title": "Oh! La teva prova gratuïta ha finalitzat",
 	"account.full_name": "Nom i Cognoms",
 	"account.generate_key": "Generar un nou codi",
+	"account.invite-collaborators.add-users.add-owners": "Afegir administrador al compte",
+	"account.invite-collaborators.add-users.description": "Afegir propietaris al vostre compte els dóna permís per gestionar el compte, crear i gestionar Knowledge Boxes, així com convidar col·laboradors a cada Knowledge Box.",
+	"account.invite-collaborators.add-users.email.help": "Premeu Intro per afegir",
+	"account.invite-collaborators.add-users.email.label": "Correu electrònic de l'usuari",
+	"account.invite-collaborators.add-users.invite-button": "Convida usuaris",
+	"account.invite-collaborators.add-users.title": "Convida usuaris",
+	"account.invite-collaborators.add-users.toast.error": "S'ha produït un error en convidar {{emails}}",
+	"account.invite-collaborators.add-users.toast.success": "{{count}} administradors convidats correctament.",
+	"account.invite-collaborators.done": "Fet",
+	"account.invite-collaborators.setup-sso.description": "Si la vostra empresa utilitza l'inici de sessió únic, primer haureu de configurar-lo a la pàgina de configuració del compte. Aleshores, podreu convidar col·laboradors des de la pàgina Usuaris.",
+	"account.invite-collaborators.setup-sso.link": "Aneu a la pàgina de configuració del compte",
+	"account.invite-collaborators.setup-sso.title": "Configura l'inici de sessió únic",
+	"account.invite-collaborators.title": "Afegeix col·laboradors",
 	"account.invited_user": "Hem enviat un correu electrònic a {{user}} invitant-lo a unir-se a aquest compte",
 	"account.kb.add": "Afegir Knowledge Box",
 	"account.kb.count": "{{count}} de {{max}}",
@@ -495,8 +508,9 @@
 	"kb.create.in_progress": "Creació de la Knowledge Box en curs...",
 	"kb.create.invalid_name": "El nom de la Knowledge Box no és vàlid",
 	"kb.create.title": "Crea una Knowledge Box",
-	"kb.invalid-slug": "El Knowledge Box slug no és vàlid",
-	"kb.name": "Nom de la Knowledge Box",
+	"kb.form.invalid-slug": "El Knowledge Box slug no és vàlid",
+	"kb.form.name": "Nom de la Knowledge Box",
+	"kb.form.required-name": "Camp necessari",
 	"kb.settings.learning-options.anthropic": "Anthropic Claude 2.1",
 	"kb.settings.learning-options.azure-mistral": "Mistral + Azure Mistral large",
 	"kb.settings.learning-options.chatgpt": "OpenAI ChatGPT-3.5",
@@ -657,6 +671,19 @@
 	"notification.type.modification-completed": "Edició del recurs completada",
 	"notification.type.modification-failed": "Edició del recurs fallida",
 	"notification.type.sync-server-down": "El servidor de sincronització està inactiu",
+	"onboarding.aws.create-kb.title": "Crear una Knowledge Box",
+	"onboarding.aws.get-started.create-kb": "Crear el meu propi Knowledge Box",
+	"onboarding.aws.get-started.create-kb-or-invite": "Voleu crear el vostre propi Knowledge Box o convidar altres usuaris a configurar-lo?",
+	"onboarding.aws.get-started.invite-owner": "Convida un propietari del compte a crear Knowledge Box",
+	"onboarding.aws.get-started.kb-help": "Un Knowledge Box és un contenidor que emmagatzema i organitza dades dins del vostre compte Nuclia. Els Knowledge Boxes representen espais de treball aïllats (com ara projectes, equips o clients) i funcionen de manera independent amb els seus propis permisos d'accés per mantenir la informació segura i organitzada.",
+	"onboarding.aws.get-started.kb-required": "Per carregar, gestionar i cercar fitxers primer heu de crear un <strong>Knowledge Box<strong>.",
+	"onboarding.aws.get-started.next-button": "Següent pas",
+	"onboarding.aws.get-started.title": "Inicia la configuració",
+	"onboarding.aws.monthly-budget.help": "Podeu establir un límit de despesa mensual. Sempre el podeu canviar més endavant a la pàgina de subscripció.",
+	"onboarding.aws.monthly-budget.question": "T'agradaria establir un pressupost mensual per al consum?",
+	"onboarding.aws.monthly-budget.set-up-account-button": "Configura el teu compte",
+	"onboarding.aws.monthly-budget.set-up-error": "S'ha produït un error en configurar el pressupost mensual. Torneu-ho a provar més tard des de la pàgina de subscripció.",
+	"onboarding.aws.title": "Benvingut al vostre compte",
 	"pastanaga.calendar.invalid-format": "Format de data no vàlid (format esperat: \"MMM dd, YYYY\")",
 	"pastanaga.calendar.months": "Mesos",
 	"pastanaga.calendar.years": "Anys",
@@ -679,18 +706,16 @@
 	"profile.select_language": "Selecciona l’idioma preferent",
 	"prompt-lab.configuration.generate-button": "Generar",
 	"prompt-lab.configuration.models.title": "Seleccioneu tots els models que voleu comparar",
-	"prompt-lab.configuration.prompts.example": "Exemples",
-	"prompt-lab.configuration.prompts.examples.first-example": "Tenint en compte aquest context:\n{context}\nDoneu una resposta detallada a aquesta pregunta:\n{question} .\nSi no trobeu una resposta en el context, digueu que no teniu prou dades.",
-	"prompt-lab.configuration.prompts.examples.second-example": "Tenint en compte aquest context proporcionat.\n    Context:\n    {context}\nRespon aquesta pregunta com un professional mèdic:\n \"{question}\"",
-	"prompt-lab.configuration.prompts.examples.third-example": "Tenint en compte aquest context proporcionat:\n{context}\nPots respondre aquesta pregunta d'una manera clara i concisa:\n{question}",
 	"prompt-lab.configuration.prompts.label": "Prompt",
-	"prompt-lab.configuration.prompts.placeholder": "Introduïu la vostra sol·licitud amb els termes {question} i {context} entre parèntesis on voleu que es col·loquin la pregunta i el context.",
+	"prompt-lab.configuration.prompts.placeholder": "Introduïu la vostra sol·licitud amb la paraula {question} entre claudàtors on voleu que es col·loqui la consulta",
 	"prompt-lab.configuration.prompts.title": "Definiu les indicacions que influiran en la manera com es comporta el sistema quan feu una pregunta (opcional)",
 	"prompt-lab.configuration.question.help": "Afegiu la vostra pregunta prement Retorn o el botó \"+\"",
 	"prompt-lab.configuration.question.label": "Pregunta",
 	"prompt-lab.configuration.question.placeholder": "Escriu la teva pregunta aquí",
 	"prompt-lab.configuration.question.title": "Escriu fins a tres preguntes amb les quals vulguis provar",
 	"prompt-lab.configuration.title": "Configuració",
+	"prompt-lab.generate.confirmation.inconsistency-warning": "Tingueu en compte que durant la prova, els usuaris que podrien estar utilitzant el vostre Knowledge Box podrien experimentar respostes inconsistents.\n<br><br>Si us plau, feu la prova durant el desenvolupament o quan estigueu segur que cap usuari es veurà afectat per aquests canvis.",
+	"prompt-lab.generate.confirmation.title": "Abans de continuar...",
 	"prompt-lab.generate.loading.description": "Estem generant els teus resultats. Si us plau, no abandonis la pàgina.",
 	"prompt-lab.generate.loading.title": "Només un moment…",
 	"prompt-lab.page-description": "Proveu els LLM i les indicacions, mireu com funcionen junts, trieu quina configuració voleu aplicar al vostre Knowledge Box.",
