--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -47,6 +47,19 @@
 	"account.free_trial_ended.title": "Oh! Your free trial has ended",
 	"account.full_name": "Name and surname",
 	"account.generate_key": "Generate a new key",
+	"account.invite-collaborators.add-users.add-owners": "Add account owners",
+	"account.invite-collaborators.add-users.description": "Adding owners to your account gives them permission to manage the account, create and manage Knowledge Boxes, as well as invite collaborators to each Knowledge Box.",
+	"account.invite-collaborators.add-users.email.help": "Press Enter to add",
+	"account.invite-collaborators.add-users.email.label": "User’s email",
+	"account.invite-collaborators.add-users.invite-button": "Invite users",
+	"account.invite-collaborators.add-users.title": "Invite users",
+	"account.invite-collaborators.add-users.toast.error": "An error occurred while inviting {{emails}}",
+	"account.invite-collaborators.add-users.toast.success": "{{count}} owners successfully invited.",
+	"account.invite-collaborators.done": "Done",
+	"account.invite-collaborators.setup-sso.description": "If your enterprise is using Single Sign-On, you should configure it first on the Account settings page. Then, you'll be able to invite collaborators from the Users page.",
+	"account.invite-collaborators.setup-sso.link": "Go to Account settings page",
+	"account.invite-collaborators.setup-sso.title": "Setup Single Sign-On",
+	"account.invite-collaborators.title": "Add collaborators",
 	"account.invited_user": "We have sent an invitation email to {{user}} to join this account",
 	"account.kb.add": "Add Knowledge Box",
 	"account.kb.count": "{{count}} of {{max}}",
@@ -496,8 +509,9 @@
 	"kb.create.in_progress": "Knowledge Box creation in progress…",
 	"kb.create.invalid_name": "Invalid Knowledge Box name",
 	"kb.create.title": "Create a Knowledge Box",
-	"kb.invalid-slug": "Invalid Knowledge Box slug",
-	"kb.name": "Knowledge Box name",
+	"kb.form.invalid-slug": "Invalid Knowledge Box slug",
+	"kb.form.name": "Knowledge Box name",
+	"kb.form.required-name": "Required field",
 	"kb.settings.learning-options.anthropic": "Anthropic Claude 2.1",
 	"kb.settings.learning-options.azure-mistral": "Mistral + Azure Mistral large",
 	"kb.settings.learning-options.chatgpt": "OpenAI ChatGPT-3.5",
@@ -658,6 +672,19 @@
 	"notification.type.modification-completed": "Resource edition completed",
 	"notification.type.modification-failed": "Resource edition failed",
 	"notification.type.sync-server-down": "Sync server is down",
+	"onboarding.aws.create-kb.title": "Create a Knowledge Box",
+	"onboarding.aws.get-started.create-kb": "Create my own Knowledge Box",
+	"onboarding.aws.get-started.create-kb-or-invite": "Would you like to create your own Knowledge Box or invite other users to set it up?",
+	"onboarding.aws.get-started.invite-owner": "Invite an account owner to create Knowledge Box",
+	"onboarding.aws.get-started.kb-help": "A Knowledge Box is a container that stores and organizes data inside your Nuclia account. Knowledge Boxes represent isolated workspaces (such as projects, teams, or clients) and operate independently with their own access permissions to keep information secured and organized.",
+	"onboarding.aws.get-started.kb-required": "In order to upload, manage and search files you first need to create a <strong>Knowledge Box<strong>.",
+	"onboarding.aws.get-started.next-button": "Next step",
+	"onboarding.aws.get-started.title": "Get started",
+	"onboarding.aws.monthly-budget.help": "You can set a monthly spending limit. You can always change it later in the Subscription page.",
+	"onboarding.aws.monthly-budget.question": "Would you like to set a monthly budget for consumption?",
+	"onboarding.aws.monthly-budget.set-up-account-button": "Set up your account",
+	"onboarding.aws.monthly-budget.set-up-error": "An error occurred while setting up the monthly budget. Please try again later from the Subscription page.",
+	"onboarding.aws.title": "Welcome to your account",
 	"pastanaga.calendar.invalid-format": "Invalid date format (expected format: \"MMM dd, YYYY\")",
 	"pastanaga.calendar.months": "Months",
 	"pastanaga.calendar.years": "Years",
@@ -680,18 +707,16 @@
 	"profile.select_language": "Select language",
 	"prompt-lab.configuration.generate-button": "Generate",
 	"prompt-lab.configuration.models.title": "Select all the models you want to compare",
-	"prompt-lab.configuration.prompts.example": "Examples",
-	"prompt-lab.configuration.prompts.examples.first-example": "Taking into account this context:\n{context} \nGive a detailed answer to this question:\n{question} . \nIf you do not find an answer in the context, say that you don't have enough data.",
-	"prompt-lab.configuration.prompts.examples.second-example": "Taking into account this provided context.\n    Context:\n    {context}\n Answer this question like a medical professional:\n \"{question}\"",
-	"prompt-lab.configuration.prompts.examples.third-example": "Taking into account this provided context:  \n{context} \nCan you answer this question in a clear, concise way:\n{question}",
 	"prompt-lab.configuration.prompts.label": "Prompt",
-	"prompt-lab.configuration.prompts.placeholder": "Input your prompt with the terms {question} and {context} in brackets where you want the question and context to be placed.",
+	"prompt-lab.configuration.prompts.placeholder": "Input your prompt with the word {question} in brackets where you want the query to be placed",
 	"prompt-lab.configuration.prompts.title": "Define the prompts that will influence the way the system behaves when you ask a question (optional)",
 	"prompt-lab.configuration.question.help": "Add your question by pressing Enter or the '+' button",
 	"prompt-lab.configuration.question.label": "Question",
 	"prompt-lab.configuration.question.placeholder": "Write your question here",
 	"prompt-lab.configuration.question.title": "Write up to three questions you want to test with",
 	"prompt-lab.configuration.title": "Configuration",
+	"prompt-lab.generate.confirmation.inconsistency-warning": "Please be aware that during the testing, users that might be using your Knowledge Box could experience inconsistent answers.\n<br><br>\nPlease do the testing while in development or when you’re sure no user will be affected by these changes.",
+	"prompt-lab.generate.confirmation.title": "Before you continue…",
 	"prompt-lab.generate.loading.description": "We’re generating your results. Please do not leave the page.",
 	"prompt-lab.generate.loading.title": "Just a moment…",
 	"prompt-lab.page-description": "Test LLMs and prompts, see how they work together, choose which settings you want to apply to your Knowledge Box.",
