--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -47,6 +47,19 @@
 	"account.free_trial_ended.title": "¡Oh! Tu prueba gratuita ha finalizado",
 	"account.full_name": "Nombre y Apellidos",
 	"account.generate_key": "Generar un nuevo código",
+	"account.invite-collaborators.add-users.add-owners": "Añadir administrador a la cuenta",
+	"account.invite-collaborators.add-users.description": "Agregar propietarios a su cuenta les otorga permiso para administrar la cuenta, crear y administrar Knowledge Boxes, así como invitar colaboradores a cada Knowledge Box.",
+	"account.invite-collaborators.add-users.email.help": "Presione Entrar para Agregar",
+	"account.invite-collaborators.add-users.email.label": "Correo electrónico del usuario",
+	"account.invite-collaborators.add-users.invite-button": "Invitar usuarios",
+	"account.invite-collaborators.add-users.title": "Invitar usuarios",
+	"account.invite-collaborators.add-users.toast.error": "Se produjo un error al invitar a {{emails}}",
+	"account.invite-collaborators.add-users.toast.success": "{{count}} administradores invitados correctamente.",
+	"account.invite-collaborators.done": "Hecho",
+	"account.invite-collaborators.setup-sso.description": "Si su empresa utiliza el inicio de sesión único, debe configurarlo primero en la página de configuración de la cuenta. Luego, podrás invitar a colaboradores desde la página de Usuarios.",
+	"account.invite-collaborators.setup-sso.link": "Ir a la página de configuración de la cuenta",
+	"account.invite-collaborators.setup-sso.title": "Configurar el inicio de sesión único",
+	"account.invite-collaborators.title": "Agregar colaboradores",
 	"account.invited_user": "Hemos enviado un correo a {{user}} invitándolo en esta cuenta",
 	"account.kb.add": "Añadir Knowledge Box",
 	"account.kb.count": "{{count}} de {{max}}",
@@ -495,8 +508,9 @@
 	"kb.create.in_progress": "Creación de la Knowledge Box en curso...",
 	"kb.create.invalid_name": "El nombre de la Knowledge Box no es válido",
 	"kb.create.title": "Crea una Knowledge Box",
-	"kb.invalid-slug": "El Knowledge Box slug no es válido",
-	"kb.name": "Nombre de la Knowledge Box",
+	"kb.form.invalid-slug": "El Knowledge Box slug no es válido",
+	"kb.form.name": "Nombre de la Knowledge Box",
+	"kb.form.required-name": "Campo requerido",
 	"kb.settings.learning-options.anthropic": "Anthropic Claude 2.1",
 	"kb.settings.learning-options.azure-mistral": "Mistral + Azure Mistral large",
 	"kb.settings.learning-options.chatgpt": "OpenAI ChatGPT-3.5",
@@ -657,6 +671,19 @@
 	"notification.type.modification-completed": "Edición de recursos completada",
 	"notification.type.modification-failed": "Edición de recursos fallada",
 	"notification.type.sync-server-down": "El servidor de sincronización está inactivo",
+	"onboarding.aws.create-kb.title": "Crear una Knowledge Box",
+	"onboarding.aws.get-started.create-kb": "Crear mi propia Knowledge Box",
+	"onboarding.aws.get-started.create-kb-or-invite": "¿Le gustaría crear su propio Knowledge Box o invitar a otros usuarios a configurarlo?",
+	"onboarding.aws.get-started.invite-owner": "Invitar al propietario de una cuenta a crear Knowledge Box",
+	"onboarding.aws.get-started.kb-help": "Un Knowledge Box es un contenedor que almacena y organiza datos dentro de su cuenta Nuclia. Las Knowledge Boxes representan espacios de trabajo aislados (como proyectos, equipos o clientes) y funcionan de forma independiente con sus propios permisos de acceso para mantener la información segura y organizada.",
+	"onboarding.aws.get-started.kb-required": "Para cargar, administrar y buscar archivos, primero debe crear un <strong>Knowledge Box<strong>.",
+	"onboarding.aws.get-started.next-button": "Proximo paso",
+	"onboarding.aws.get-started.title": "Inicia la configuración",
+	"onboarding.aws.monthly-budget.help": "Puede establecer un límite de gasto mensual. Siempre puedes cambiarlo más adelante en la página de Suscripción.",
+	"onboarding.aws.monthly-budget.question": "¿Quieres establecer un presupuesto mensual de consumo?",
+	"onboarding.aws.monthly-budget.set-up-account-button": "Configurar tu cuenta",
+	"onboarding.aws.monthly-budget.set-up-error": "Se produjo un error al configurar el presupuesto mensual. Vuelva a intentarlo más tarde desde la página de Suscripción.",
+	"onboarding.aws.title": "Bienvenido a tu cuenta",
 	"pastanaga.calendar.invalid-format": "Formato de fecha no válido (formato esperado: \"MMM dd, YYYY\")",
 	"pastanaga.calendar.months": "Meses",
 	"pastanaga.calendar.years": "Años",
@@ -679,18 +706,16 @@
 	"profile.select_language": "Selecciona idioma",
 	"prompt-lab.configuration.generate-button": "Generar",
 	"prompt-lab.configuration.models.title": "Selecciona todos los modelos que quieras comparar",
-	"prompt-lab.configuration.prompts.example": "Ejemplos",
-	"prompt-lab.configuration.prompts.examples.first-example": "Teniendo en cuenta este contexto:\n{context}\nDé una respuesta detallada a esta pregunta:\n{question} .\nSi no encuentra una respuesta en el contexto, diga que no tiene suficientes datos.",
-	"prompt-lab.configuration.prompts.examples.second-example": "Teniendo en cuenta este contexto proporcionado.\n    Contexto:\n    {context}\nResponda esta pregunta como un profesional médico:\n \"{question}\"",
-	"prompt-lab.configuration.prompts.examples.third-example": "Teniendo en cuenta este contexto proporcionado:\n{context}\n¿Puedes responder a esta pregunta de forma clara y concisa?\n{question}",
 	"prompt-lab.configuration.prompts.label": "Prompt",
-	"prompt-lab.configuration.prompts.placeholder": "Ingrese su mensaje con los términos {question} y {context} entre corchetes donde desea que se coloque la pregunta y el contexto.",
+	"prompt-lab.configuration.prompts.placeholder": "Ingrese su mensaje con la palabra {question} entre corchetes donde desea que se coloque la consulta",
 	"prompt-lab.configuration.prompts.title": "Defina las indicaciones que influirán en la forma en que se comporta el sistema cuando haga una pregunta (opcional)",
 	"prompt-lab.configuration.question.help": "Agregue su pregunta presionando Enter o el botón '+'",
 	"prompt-lab.configuration.question.label": "Pregunta",
 	"prompt-lab.configuration.question.placeholder": "Escribe tu pregunta aquí",
 	"prompt-lab.configuration.question.title": "Escribe hasta tres preguntas con las que quieras probar",
 	"prompt-lab.configuration.title": "Configuración",
+	"prompt-lab.generate.confirmation.inconsistency-warning": "Tenga en cuenta que durante la prueba, los usuarios que puedan estar utilizando su Knowledge Box podrían experimentar respuestas inconsistentes.\n<br><br>Realice las pruebas mientras esté en desarrollo o cuando esté seguro de que ningún usuario se verá afectado por estos cambios.",
+	"prompt-lab.generate.confirmation.title": "Antes de continuar...",
 	"prompt-lab.generate.loading.description": "Estamos generando tus resultados. Por favor no abandones la página.",
 	"prompt-lab.generate.loading.title": "Sólo un momento…",
 	"prompt-lab.page-description": "Pruebe los LLM y las indicaciones, vea cómo funcionan juntos, elija qué configuraciones desea aplicar a su Knowledge Box.",
