--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -47,6 +47,19 @@
 	"account.free_trial_ended.title": "Votre essai gratuit est terminé",
 	"account.full_name": "Prénom et nom de famille",
 	"account.generate_key": "Générer une nouvelle clé",
+	"account.invite-collaborators.add-users.add-owners": "Ajouter des administrateurs au compte",
+	"account.invite-collaborators.add-users.description": "L'ajout de propriétaires à votre compte leur donne l'autorisation de gérer le compte, de créer et de gérer des Knowledge Boxes, ainsi que d'inviter des collaborateurs dans chaque Knowledge Box.",
+	"account.invite-collaborators.add-users.email.help": "Appuyez sur entrée pour ajouter",
+	"account.invite-collaborators.add-users.email.label": "Email de l'utilisateur",
+	"account.invite-collaborators.add-users.invite-button": "Inviter les utilisateurs",
+	"account.invite-collaborators.add-users.title": "Inviter des utilisateurs",
+	"account.invite-collaborators.add-users.toast.error": "Une erreur s'est produite lors de l'invitation de {{emails}}",
+	"account.invite-collaborators.add-users.toast.success": "{{count}} administrateurs invités avec succès.",
+	"account.invite-collaborators.done": "Terminé",
+	"account.invite-collaborators.setup-sso.description": "Si votre entreprise utilise l'authentification unique, vous devez d'abord la configurer sur la page Paramètres du compte. Ensuite, vous pourrez inviter des collaborateurs depuis la page Utilisateurs.",
+	"account.invite-collaborators.setup-sso.link": "Accédez à la page Paramètres du compte",
+	"account.invite-collaborators.setup-sso.title": "Configurer l'authentification unique",
+	"account.invite-collaborators.title": "Ajouter des collaborateurs",
 	"account.invited_user": "Nous avons envoyé un e-mail d'invitation à {{user}} pour qu'il s'inscrive sur ce compte.",
 	"account.kb.add": "Ajouter une Knowledge Box",
 	"account.kb.count": "{{count}} sur {{max}}",
@@ -496,8 +509,9 @@
 	"kb.create.in_progress": "Création de la Knowledge Box en cours…",
 	"kb.create.invalid_name": "Nom de la Knowledge Box invalide",
 	"kb.create.title": "Créer une Knowledge Box",
-	"kb.invalid-slug": "Knowledge Box slug invalide",
-	"kb.name": "Nom de la Knowledge Box",
+	"kb.form.invalid-slug": "Knowledge Box slug invalide",
+	"kb.form.name": "Nom de la Knowledge Box",
+	"kb.form.required-name": "Champs requis",
 	"kb.settings.learning-options.anthropic": "Anthropic Claude 2.1",
 	"kb.settings.learning-options.azure-mistral": "Mistral + Azure Mistral large",
 	"kb.settings.learning-options.chatgpt": "OpenAI ChatGPT-3.5",
@@ -658,6 +672,19 @@
 	"notification.type.modification-completed": "Édition de la ressource terminée",
 	"notification.type.modification-failed": "Échec de l'édition de la ressource",
 	"notification.type.sync-server-down": "Le serveur de synchronisation est en panne",
+	"onboarding.aws.create-kb.title": "Créer une Knowledge Box",
+	"onboarding.aws.get-started.create-kb": "Créer ma propre Knowledge Box",
+	"onboarding.aws.get-started.create-kb-or-invite": "Souhaitez-vous créer votre propre Knowledge Box ou inviter d’autres utilisateurs pour la configurer ?",
+	"onboarding.aws.get-started.invite-owner": "Inviter un propriétaire de compte à créer une Knowledge Box",
+	"onboarding.aws.get-started.kb-help": "Une Knowledge Box est un conteneur qui stocke et organise les données dans votre compte Nuclia. Les Knowledge Boxes représentent des espaces de travail isolés (tels que des projets, des équipes ou des clients) et fonctionnent de manière indépendante avec leurs propres autorisations d'accès pour garantir la sécurité et l'organisation des informations.",
+	"onboarding.aws.get-started.kb-required": "Pour importer, gérer et rechercher des fichiers, vous devez d'abord créer une <strong>Knowledge Box<strong>.",
+	"onboarding.aws.get-started.next-button": "Étape suivante",
+	"onboarding.aws.get-started.title": "Démarrer la configuration",
+	"onboarding.aws.monthly-budget.help": "Vous pouvez définir une limite de dépenses mensuelle. Vous pourrez toujours la modifier ultérieurement sur la page Abonnement.",
+	"onboarding.aws.monthly-budget.question": "Souhaitez-vous fixer un budget mensuel de consommation ?",
+	"onboarding.aws.monthly-budget.set-up-account-button": "Configurez votre compte",
+	"onboarding.aws.monthly-budget.set-up-error": "Une erreur s'est produite lors de la configuration du budget mensuel. Veuillez réessayer plus tard à partir de la page Abonnement.",
+	"onboarding.aws.title": "Bienvenue sur votre compte",
 	"pastanaga.calendar.invalid-format": "Format de date non valide (format attendu : \"MMM dd, YYYY\")",
 	"pastanaga.calendar.months": "Mois",
 	"pastanaga.calendar.years": "Années",
@@ -680,18 +707,16 @@
 	"profile.select_language": "Choisir la langue",
 	"prompt-lab.configuration.generate-button": "Générer",
 	"prompt-lab.configuration.models.title": "Sélectionnez tous les modèles que vous souhaitez comparer",
-	"prompt-lab.configuration.prompts.example": "Exemples",
-	"prompt-lab.configuration.prompts.examples.first-example": "En tenant compte de ce contexte :\n{context}\nDonnez une réponse détaillée à cette question :\n{question} .\nSi vous ne trouvez pas de réponse dans le contexte, dites que vous ne disposez pas de suffisamment de données.",
-	"prompt-lab.configuration.prompts.examples.second-example": "En tenant compte de ce contexte fourni.\n    Contexte:\n    {context}\nRépondez à cette question comme un professionnel de la santé :\n \"{question}\"",
-	"prompt-lab.configuration.prompts.examples.third-example": "En tenant compte de ce contexte fourni :\n{context}\nPouvez-vous répondre à cette question de manière claire et concise :\n{question}",
 	"prompt-lab.configuration.prompts.label": "Prompt",
-	"prompt-lab.configuration.prompts.placeholder": "Saisissez votre invite avec les termes {question} et {context} entre parenthèses à l'endroit où vous souhaitez que la question et le contexte soient placés.",
+	"prompt-lab.configuration.prompts.placeholder": "Saisissez votre prompt avec le mot {question} entre accolades à l'endroit où vous souhaitez que la requête soit placée.",
 	"prompt-lab.configuration.prompts.title": "Définir les prompts qui influenceront le comportement du système lorsque vous posez une question (facultatif)",
 	"prompt-lab.configuration.question.help": "Ajoutez votre question en appuyant sur Entrée ou sur le bouton '+'",
 	"prompt-lab.configuration.question.label": "Question",
 	"prompt-lab.configuration.question.placeholder": "Écrivez votre question ici",
 	"prompt-lab.configuration.question.title": "Écrivez jusqu'à trois questions avec lesquelles vous souhaitez tester",
 	"prompt-lab.configuration.title": "Configuration",
+	"prompt-lab.generate.confirmation.inconsistency-warning": "Veuillez noter que lors des tests, les utilisateurs susceptibles d'utiliser votre Knowledge Box pourraient rencontrer des réponses incohérentes.\n<br><br>Veuillez effectuer les tests pendant le développement ou lorsque vous êtes sûr qu'aucun utilisateur ne sera affecté par ces modifications.",
+	"prompt-lab.generate.confirmation.title": "Avant de continuer…",
 	"prompt-lab.generate.loading.description": "Nous générons vos résultats. Merci de ne pas quitter la page.",
 	"prompt-lab.generate.loading.title": "Juste un moment...",
 	"prompt-lab.page-description": "Testez les LLM et les invites, voyez comment ils fonctionnent ensemble, choisissez les paramètres que vous souhaitez appliquer à votre Knowledge Box.",
