--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -707,8 +707,11 @@
 	"prompt-lab.configuration.generate-button": "Generar",
 	"prompt-lab.configuration.models.title": "Selecciona todos los modelos que quieras comparar",
 	"prompt-lab.configuration.prompts.example": "Ejemplo",
+	"prompt-lab.configuration.prompts.examples.first-example": "Teniendo en cuenta este contexto:\n{context}\nDé una respuesta detallada a esta pregunta:\n{question} .\nSi no encuentra una respuesta en el contexto, diga que no tiene suficientes datos.",
+	"prompt-lab.configuration.prompts.examples.second-example": "Teniendo en cuenta este contexto proporcionado.\n    Contexto:\n    {context}\n    Responda esta pregunta como un profesional médico:\n \"{question}\"",
+	"prompt-lab.configuration.prompts.examples.third-example": "Teniendo en cuenta este contexto proporcionado:\n{context} \n¿Puedes responder a esta pregunta de forma clara y concisa?\n {question}",
 	"prompt-lab.configuration.prompts.label": "Prompt",
-	"prompt-lab.configuration.prompts.placeholder": "Ingrese su mensaje con la palabra {question} entre corchetes donde desea que se coloque la consulta",
+	"prompt-lab.configuration.prompts.placeholder": "Ingrese su mensaje con los términos {question} y {context} entre corchetes donde desea que se coloque la pregunta y el contexto.",
 	"prompt-lab.configuration.prompts.title": "Defina las indicaciones que influirán en la forma en que se comporta el sistema cuando haga una pregunta (opcional)",
 	"prompt-lab.configuration.question.help": "Agregue su pregunta presionando Enter o el botón '+'",
 	"prompt-lab.configuration.question.label": "Pregunta",
