[sc-9057] Prevent line breaks to be sent as prompt in AI models (#1375)
* Prevent line breaks to be sent as prompt in AI models

* Fix space between prompt example select box and textarea

* Fix prompt examples

* Add missing translation for invitation deletion toasts

--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -98,6 +98,8 @@
 	"account.speech_to_text_description": "Nuclia offers enhanced speech-to-text models. Using these models require more computation and an associated extra cost. Check the following checkbox if you want to use the enhanced models.",
 	"account.threshold": "Consumption threshold",
 	"account.title": "Name",
+	"account.toast.delete-invite-failure": "An error occurred while deleting {{email}} invitation.",
+	"account.toast.delete-invite-success": "Invitation of {{email}} deleted.",
 	"account.token_description": "<strong>Important!</strong> Copy and save the API key. It will disappear once added.",
 	"account.token_generation_warning": "If you generate a new key, the current key will be disabled and any ongoing jobs will be lost",
 	"account.total_queries": "Total number of queries",
@@ -708,8 +710,11 @@
 	"prompt-lab.configuration.generate-button": "Generate",
 	"prompt-lab.configuration.models.title": "Select all the models you want to compare",
 	"prompt-lab.configuration.prompts.example": "Example",
+	"prompt-lab.configuration.prompts.examples.first-example": "Taking into account this context:\n{context}\nGive a detailed answer to this question:\n{question} . \nIf you do not find an answer in the context, say that you don't have enough data.",
+	"prompt-lab.configuration.prompts.examples.second-example": "Taking into account this provided context.\n    Context:\n    {context}\n    Answer this question like a medical professional.:\n \"{question}\"",
+	"prompt-lab.configuration.prompts.examples.third-example": "Taking into account this provided context:  \n{context} \nCan you answer this question in a clear, concise way:\n {question}",
 	"prompt-lab.configuration.prompts.label": "Prompt",
-	"prompt-lab.configuration.prompts.placeholder": "Input your prompt with the word {question} in brackets where you want the query to be placed",
+	"prompt-lab.configuration.prompts.placeholder": "Input your prompt with the terms {question} and {context} in brackets where you want the question and context to be placed.",
 	"prompt-lab.configuration.prompts.title": "Define the prompts that will influence the way the system behaves when you ask a question (optional)",
 	"prompt-lab.configuration.question.help": "Add your question by pressing Enter or the '+' button",
 	"prompt-lab.configuration.question.label": "Question",
