--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -97,6 +97,8 @@
 	"account.speech_to_text_description": "Nuclia ofrece modelos mejorados de voz a texto. El uso de estos modelos requiere un cómputo mayor y tienen un costo extra. Marque la siguiente casilla de verificación si desea utilizar los modelos mejorados.",
 	"account.threshold": "Umbral de consumo",
 	"account.title": "Nombre",
+	"account.toast.delete-invite-failure": "Se produjo un error al eliminar la invitación {{email}} .",
+	"account.toast.delete-invite-success": "Invitación de {{email}} eliminada.",
 	"account.token_description": "<strong>¡Importante!</strong> Copie y guarde la clave API. Desaparecerá una vez añadido.",
 	"account.token_generation_warning": "Si generas un nuevo código perderás el acceso con la clave actual y se perderán los procesos que se estén ejecutando en estos momentos.",
 	"account.total_queries": "Número total de búsquedas",
@@ -707,8 +709,11 @@
 	"prompt-lab.configuration.generate-button": "Generar",
 	"prompt-lab.configuration.models.title": "Selecciona todos los modelos que quieras comparar",
 	"prompt-lab.configuration.prompts.example": "Ejemplo",
+	"prompt-lab.configuration.prompts.examples.first-example": "Teniendo en cuenta este contexto:\n{context}\nDé una respuesta detallada a esta pregunta:\n{question} .\nSi no encuentra una respuesta en el contexto, diga que no tiene suficientes datos.",
+	"prompt-lab.configuration.prompts.examples.second-example": "Teniendo en cuenta este contexto proporcionado.\n    Contexto:\n    {context}\n    Responda esta pregunta como un profesional médico:\n \"{question}\"",
+	"prompt-lab.configuration.prompts.examples.third-example": "Teniendo en cuenta este contexto proporcionado:\n{context} \n¿Puedes responder a esta pregunta de forma clara y concisa?\n {question}",
 	"prompt-lab.configuration.prompts.label": "Prompt",
-	"prompt-lab.configuration.prompts.placeholder": "Ingrese su mensaje con la palabra {question} entre corchetes donde desea que se coloque la consulta",
+	"prompt-lab.configuration.prompts.placeholder": "Ingrese su mensaje con los términos {question} y {context} entre corchetes donde desea que se coloque la pregunta y el contexto.",
 	"prompt-lab.configuration.prompts.title": "Defina las indicaciones que influirán en la forma en que se comporta el sistema cuando haga una pregunta (opcional)",
 	"prompt-lab.configuration.question.help": "Agregue su pregunta presionando Enter o el botón '+'",
 	"prompt-lab.configuration.question.label": "Pregunta",
