--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -98,6 +98,8 @@
 	"account.speech_to_text_description": "Nuclia propose des modèles de synthèse vocale améliorés. L'utilisation de ces modèles nécessite plus de calculs et un coût supplémentaire associé. Cochez la case suivante si vous souhaitez utiliser les modèles améliorés.",
 	"account.threshold": "Seuil de consommation",
 	"account.title": "Nom",
+	"account.toast.delete-invite-failure": "Une erreur s'est produite lors de la suppression de {{email}} invitation.",
+	"account.toast.delete-invite-success": "Invitation de {{email}} supprimée.",
 	"account.token_description": "<strong> Important !</strong> Copiez et enregistrez la clé API. Il disparaîtra une fois ajouté.",
 	"account.token_generation_warning": "Si vous générez une nouvelle clé, la clé actuelle sera désactivée et tous les travaux en cours seront perdus.",
 	"account.total_queries": "Nombre total de requêtes",
@@ -708,8 +710,11 @@
 	"prompt-lab.configuration.generate-button": "Générer",
 	"prompt-lab.configuration.models.title": "Sélectionnez tous les modèles que vous souhaitez comparer",
 	"prompt-lab.configuration.prompts.example": "Exemple",
+	"prompt-lab.configuration.prompts.examples.first-example": "En tenant compte de ce contexte :\n{context}\nDonnez une réponse détaillée à cette question :\n{question} .\nSi vous ne trouvez pas de réponse dans le contexte, dites que vous ne disposez pas de suffisamment de données.",
+	"prompt-lab.configuration.prompts.examples.second-example": "En tenant compte de ce contexte fourni.\n    Contexte:\n    {context}\n    Répondez à cette question comme un professionnel de la santé. :\n \"{question}\"",
+	"prompt-lab.configuration.prompts.examples.third-example": "En tenant compte de ce contexte fourni :\n{context} \nPouvez-vous répondre à cette question de manière claire et concise :\n {question}",
 	"prompt-lab.configuration.prompts.label": "Prompt",
-	"prompt-lab.configuration.prompts.placeholder": "Saisissez votre prompt avec le mot {question} entre accolades à l'endroit où vous souhaitez que la requête soit placée.",
+	"prompt-lab.configuration.prompts.placeholder": "Saisissez votre invite avec les termes {question} et {context} entre parenthèses à l'endroit où vous souhaitez que la question et le contexte soient placés.",
 	"prompt-lab.configuration.prompts.title": "Définir les prompts qui influenceront le comportement du système lorsque vous posez une question (facultatif)",
 	"prompt-lab.configuration.question.help": "Ajoutez votre question en appuyant sur Entrée ou sur le bouton '+'",
 	"prompt-lab.configuration.question.label": "Question",
